vlib/v/checker/tests/optional_void_called_as_normal.vv
fn foo() ? {
	println('foo is called')
}

fn main() {
	// Calling foo() without ? or an or block, should be an error.
	foo()
}
